:construction: inserting new informations

--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,4 +1,4 @@
-name: Waka Readme
+name: waka-readme
 
 on:
   workflow_dispatch:
@@ -24,3 +24,6 @@ jobs:
           SHOW_LOC_CHART: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_SHORT_INFO: "False"
+
+
+          
