--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,6 +16,8 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: henriquesbezerra # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
+          COMMIT_MESSAGE: Updated the Readme Metrics
+          SHOW_TITLE: true
           SHOW_OS: "False"
           SHOW_PROJECTS: "False"
           SHOW_PROFILE_VIEWS: "False"
