--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -18,10 +18,10 @@ jobs:
           USERNAME: henriquesbezerra # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
           COMMIT_MESSAGE: Updated the Readme Metrics
           SHOW_TITLE: true
-          SHOW_OS: "False"
+          SHOW_OS: true
           SHOW_PROJECTS: "False"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_EDITORS: "False"
+          SHOW_EDITORS: true
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
           SHOW_LINES_OF_CODE: "True"
