--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -14,3 +14,6 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          COMMIT_MSG: Updated recente github moves
+          MAX_LINES: 5
