--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,7 +16,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: henriquesbezerra # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
-          COMMIT_MESSAGE: Updated the Readme Metrics
+          COMMIT_MESSAGE: Updated the Readme with new Metrics
           SHOW_TITLE: true
           SHOW_OS: true
           SHOW_PROJECTS: "False"
