--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 3"
 
 jobs:
   update-readme:
@@ -20,12 +20,12 @@ jobs:
           SHOW_TITLE: true
           SHOW_OS: true
           SHOW_PROJECTS: "False"
-          SHOW_PROFILE_VIEWS: "False"
+          SHOW_PROFILE_VIEWS: true
           SHOW_EDITORS: true
           SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: false
+          SHOW_LINES_OF_CODE: true
+          SHOW_SHORT_INFO: true
 
 
           
