--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -2,7 +2,7 @@ name: update-activity
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 0 * * 3'
   workflow_dispatch:
 
 jobs:
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+      - uses: jamesgeorge007/github-activity-readme@v0.3.6
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
